syntax = "proto3";

package cloud.lianmi.im.user;
option go_package = "github.com/lianmi/servers/api/proto/user";

//性别枚举定义
enum Gender {
    Sex_Unknown = 0;
    Sex_Male = 1;
    Sex_Female = 2;
}

//账号类型
enum UserType {
    Ut_Undefined = 0;
    //一般用户
    Ut_Normal = 1;
    //网点用户
    Ut_Business = 2;
    //操作员, 例如admin
    Ut_Operator = 10086;
}

enum UserState {
    Ss_Normal = 0;
    Ss_Vip = 1;
    Ss_Blocked = 2;
}

//获取用户加好友的选项,3是默认
enum AllowType {
    UAT_Unknow = 0;     
    UAT_AllowAny = 1;
    UAT_DenyAny = 2;
    UAT_NeedConfirm = 3; 
}

//1-2 修改用户资料 的map的键值类型 
enum UserFeild {
  /// 未定义
  UserFeild_Undefined =0; 

  ///  昵称
  UserFeild_Nick =1;

  ///  性别
  UserFeild_Gender =2;

  ///  头像
  UserFeild_Avatar =3;

  ///  签名
  UserFeild_Label =4;

  ///  实名
  UserFeild_TrueName =5;

  ///  email
  UserFeild_Email =6;

  ///  扩展信息
  UserFeild_Extend =7;

  /// 添加好友验证方式
  UserFeild_AllowType =8;

  /// 省份
  UserFeild_Province =9;

  /// 城市 
  UserFeild_City =10;

  ///  区 
  UserFeild_County =11;

  ///  街道 
  UserFeild_Street =12;

  ///  地址 
  UserFeild_Address =13;

  /// 身份证
  UserFeild_IdentityCard =14;

}

//根据用户ID批量获取用户信息,登录后拉取其他用户资料,添加好友查询好友资料
message GetUsersReq {
    repeated string usernames = 1;
}

message GetUsersResp {
    repeated User users = 1;
}

// 用户信息
message User {
    uint64 id        = 1;  //自增ID
    string smscode   = 2;
    string username  = 3;
    string password  = 4;  //密码 是否必填-是
    Gender gender    = 5;
    string nick      = 6;
    string avatar    = 7;
    string label     = 8;
    string mobile    = 9;
    string email     = 10;
    string extend                 = 11;
    AllowType allow_type          = 12;
    UserType user_type            = 13;
    UserState state               = 14;
    string trueName               = 15;  //实名
    string identityCard           = 16;  //身份证号码
    string province               = 17;  //省份, 如广东省
    string city                   = 18;  //城市，如广州市
    string county                 = 19;  //区，如天河区
    string street                 = 20;  //街道
    string address                = 21;  //地址
    string referrer_username      = 22;  //推荐人
    string belong_business_user   = 23;  //所属商户
    fixed64 vipEndDate            = 24;  //VIP用户到期时间
    fixed64 createdAt             = 25;  //用户注册时间,Unix时间戳
    fixed64 updatedAt             = 26;  //用户资料最后更新时间,Unix时间戳
}

//多条件不定参数批量分页获取用户列表
message QueryUsersReq {
    string mobile           = 1;   //手机号
    UserType userType       = 2;   //用户类型
    UserState state         = 3;   //状态
    string referrerUsername = 4;   //推荐人
    string trueName         = 5;   //实名
    fixed64 startAt         = 6;   //注册开始时间, 按时间段查询
    fixed64 endAt           = 7;   //注册结束时间
    int32 page              = 8;   //页数,第几页
    int32 pageSize          = 9;   //每页记录数量
}

message QueryUsersResp {
    repeated User users = 1;  //用户列表
    fixed64 total=2;  //按请求参数的pageSize计算出来的总页数
}
